practice above loop,if else, dtyprs varile

--- a/Javascript/practise_js/1. pra_dtype.html
+++ b/Javascript/practise_js/1. pra_dtype.html
@@ -12,6 +12,7 @@
 
 
     <script>
+        // day 1
         // var bool = true;
         // var string = "shubham";
         // var num = 123456;
@@ -24,6 +25,16 @@
         // console.log(typeof int);
         // console.log(typeof num);
 
+
+        // day 2
+        // var str = "shubham";
+        // var number = 123456;
+        // var bool = true;
+        // var float = 14.55;
+        // var int = 2334;
+        // var nums = 12345n;
+        // var num = null;
+        // var num; 
     </script>
 </body>
 </html>
