--- a/Javascript/practise_js/2. prac_varibles.html
+++ b/Javascript/practise_js/2. prac_varibles.html
@@ -10,100 +10,129 @@
 
     <script>
 
-        // let varibales
-        let array = [1,2,3,4,5,6,7]
-        let list = ["shub","meshram","gondia"]
-        let tupple = (1,2,3,4,5,6)
-        let dist = {"a":{"b":[1,2,3,4,5]}}
-        let nums = 12344566
-        // console.log(nums);
-        // console.log(typeof nums);
-        // console.log(typeof tupple);
-        // console.log(dist);
+        // // day 1
+        // // let varibales
+        // let array = [1,2,3,4,5,6,7]
+        // let list = ["shub","meshram","gondia"]
+        // let tupple = (1,2,3,4,5,6)
+        // let dist = {"a":{"b":[1,2,3,4,5]}}
+        // let nums = 12344566
+        // // console.log(nums);
+        // // console.log(typeof nums);
+        // // console.log(typeof tupple);
+        // // console.log(dist);
 
 
-        // const varibles
-        a = {"d":["meshram","shubham"]}
-        const str = "shubham"
-        const numeber = 1234567
-        const numbers = ["shubha","meshram","gondia"] 
-        const arrays = [12,33,4,55,553]
-        const n_dists = {"name":{"emp_id":[12,33,44,55,22]}}
-        const fixt_num = 155.55
-        console.log(fixt_num)
-        console.log(typeof fixt_num)
-        // console.log(n_dists);
-        // console.log(typeof n_dists);
-        // console.log(dist);
-        // console.log(typeof dist);
-        // console.log(a);
-        // console.log(typeof a);
-
-
-
-        // var varibales 
-        var a = "shubham"
-        var b = 12345667
-        var c = [12,3,45,66]
-        var d = (1,2,3,4,5)
-        var e = {"a":[24,4,6,77,4]}
-        var f = {"b":{"d":["shubha","meshram","gondia"]}}
-        var g = {"b":{"d":[3,5,6]}}
-        var n_c = [12,3,44,[34,66,44],56,77]
-        var ns = 1234567n
-        var bloolean = true;
-        // console.log(a)
-        // console.log(typeof a)
+        // // const varibles
+        // a = {"d":["meshram","shubham"]}
+        // const str = "shubham"
+        // const numeber = 1234567
+        // const numbers = ["shubha","meshram","gondia"] 
+        // const arrays = [12,33,4,55,553]
+        // const n_dists = {"name":{"emp_id":[12,33,44,55,22]}}
+        // const fixt_num = 155.55
+        // console.log(fixt_num)
+        // console.log(typeof fixt_num)
+        // // console.log(n_dists);
+        // // console.log(typeof n_dists);
+        // // console.log(dist);
+        // // console.log(typeof dist);
+        // // console.log(a);
+        // // console.log(typeof a);
 
 
 
+        // // var varibales 
+        // var a = "shubham"
+        // var b = 12345667
+        // var c = [12,3,45,66]
+        // var d = (1,2,3,4,5)
+        // var e = {"a":[24,4,6,77,4]}
+        // var f = {"b":{"d":["shubha","meshram","gondia"]}}
+        // var g = {"b":{"d":[3,5,6]}}
+        // var n_c = [12,3,44,[34,66,44],56,77]
+        // var ns = 1234567n
+        // var bloolean = true;
+        // // console.log(a)
+        // // console.log(typeof a)
 
-        // variable in js
-        // naming convertion
 
-        // camelclass
-        let first_name = "shubham"
+
+
+        // // variable in js
+        // // naming convertion
+
+        // // camelclass
+        // let first_name = "shubham"
         
-        // pascalcase
-        let last_name = "meshram"
+        // // pascalcase
+        // let last_name = "meshram"
 
 
-        // snakecase
-        let middel_name = " Pramanand "
+        // // snakecase
+        // let middel_name = " Pramanand "
 
-        // using contanse (cost keyword)
-        const c_num = 99
+        // // using contanse (cost keyword)
+        // const c_num = 99
 
-        // job title name (strings)
-        var job_name = "web development"
+        // // job title name (strings)
+        // var job_name = "web development"
 
-        // emp card number
-        var emp_card = "1234567890";
+        // // emp card number
+        // var emp_card = "1234567890";
 
-        // payment status (bloolean)
-        var Ispaid = true
+        // // payment status (bloolean)
+        // var Ispaid = true
+
+        // // declearing varibles
+        // var mode_of_payment;
+
+
+        // // taking input from user
+        // mode_of_payment = prompt("mode of payamnet")
+
+
+        // // output to user
+        // alert(first_name +' '+ "succsefully brodug" + ' ' + job_name + ' ' +  "using" + ' ' + mode_of_payment )
+
+
+
+        // // self try
+        // var full_name;
+        // full_name = prompt("Full name")
+
+        // alert(first_name +' '+ last_name + ' '+  "succsefully updated")
+
+
+
+        // day 2
+        // create varible let const and var
+        var tupple = (1,34,5,"shubham")
+        let list_of_arr = [1,2,3,4,5];
+        const object_of_arr = ["shubham","meshram","gondia"];
+        const object_of_object = {name: "shubham",salary: 15000,city:"gondia"}
+
+        console.log(list_of_arr);
+        console.log(typeof list_of_arr);
+        console.log(object_of_arr);
+        console.log(typeof object_of_arr);
+        console.log(object_of_object);
+        console.log(typeof object_of_object);
+
+
+
+        var name = "shubham";
+        var name2 = "Meshram";
+        var age = 25;
 
         // declearing varibles
-        var mode_of_payment;
+        var this_my_name;
 
-
-        // taking input from user
-        mode_of_payment = prompt("mode of payamnet")
-
+        // / taking input from user
+        this_my_name = prompt("check your name");
 
         // output to user
-        alert(first_name +' '+ "succsefully brodug" + ' ' + job_name + ' ' +  "using" + ' ' + mode_of_payment )
-
-
-
-        // self try
-        var full_name;
-        full_name = prompt("Full name")
-
-        alert(first_name +' '+ last_name + ' '+  "succsefully updated")
-
-
-
+        alert(name+' '+ name2+ ' '+ age + ' '+ this_my_name)
 
 
 
