--- a/Javascript/practise_js/1. pra_dtype.html
+++ b/Javascript/practise_js/1. pra_dtype.html
@@ -35,6 +35,20 @@
         // var nums = 12345n;
         // var num = null;
         // var num; 
+
+
+        // day 3
+        let string = "my name is shubham";
+        let numbers = 1234567;
+        let bool = false
+        let float = 22.55
+        let int = 43
+        let nums = 123456n
+        let numss = null
+        let nummms;
+
+        console.log(string);
+        console.log(typeof numbers);
     </script>
 </body>
 </html>
