--- a/Javascript/practise_js/3.if else practce3.html
+++ b/Javascript/practise_js/3.if else practce3.html
@@ -70,6 +70,54 @@
         // }
 
 
+        // day 3
+        // example 1
+        if (12 > 33){
+            console.log("true")
+        }
+
+
+        // example 2
+        if (12 < 15){
+            console.log("True")
+        }
+
+        // example 3
+        if (12 > 15){
+            console.log("12 less then 15")
+        }
+        else if( 12 > 15){
+            console.log(" 15 greter then 12")
+        }
+        else{
+            console.log("equel")
+        }
+
+
+        // practic prompt and alert 
+        var sub_time = prompt("hey waht is subject time: ")
+
+        if ( sub_time > 10 && sub_time < 12){
+            alert("this time Lecture is english subject")
+        }
+        else if( sub_time > 12 && sub_time < 15){
+            alert("this time Lecture is marathi subject")
+        }
+        else if (sub_time == 16){
+            alert("This time is kecture is science subject")
+        }
+        else{
+            alert("this is branck time")
+        }
+
+
+
+
+
+
+
+
+
         
 
         
