--- a/Projects/amazon clone/index.html
+++ b/Projects/amazon clone/index.html
@@ -1,77 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-    <div class="navbar">
-        <div class="nav-logo border">
-            <div class="logo"></div>
-        </div>
+        <div class="navbar">
+            <div class="nav-logo border">
+                <div class="logo"></div>
+            </div>
 
-        <!-- location -->
-        <div class="nav-address border">
-            <p class="add-first">Deliver to</p>
-            <div class="add-icon">
-                <i class="fa-solid fa-location-dot"></i>
-                <p class="add-second">India</p>
+            <!-- location -->
+            <div class="nav-address border">
+                <p class="add-first">Deliver to</p>
+                <div class="add-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class="add-second">India</p>
+                </div>
+            </div>
+
+            <!-- search bar -->
+            <div class="nav-search">
+                <select class="search-select">
+                    <option>All</option>
+                </select>
+                <input placeholder="Search Amazon" class="search-input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
+            <!-- create sighnin -->
+            <div class="nav-signin border">
+                <p><span>Hello, sign in</span></p>
+                <p class="nav-second">Account & Lists</p>
+            </div>
+
+            <!-- return oredrs -->
+            <div class="nav-signin border">
+                <p><span>Return</span></p>
+                <p class="nav-second">& Orders</p>
+            </div>
+
+            <!-- card box create -->
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
             </div>
         </div>
 
-        <!-- search bar -->
-        <div class="nav-search">
-            <select class="search-select">
-                <option>All</option>
-            </select>
-            <input placeholder="Search Amazon" class="search-input">
-            <div class="search-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
+        <!-- panal nav bar -->
+        <div class="panel">
+            <div class="panel-all border">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel-ops">
+                <p class="border">Today's Deals</p>
+                <p class="border">Registry</p>
+                <p class="border">Customer Service</p>
+                <p class="border">Gift Cards</p>
+                <p class="border">Sell</p>
+            </div>
+            <div class="panel-deals border">
+                Shop deals in Electronics
+
             </div>
         </div>
-        <!-- create sighnin -->
-        <div class="nav-signin border">
-            <p><span>Hello, sign in</span></p>
-            <p class="nav-second">Account & Lists</p>
-        </div>
+    </header>
 
-        <!-- return oredrs -->
-        <div class="nav-signin border">
-            <p><span>Return</span></p>
-            <p class="nav-second">& Orders</p>
-        </div>
-
-        <!-- card box create -->
-        <div class="nav-cart border">
-            <i class="fa-solid fa-cart-shopping"></i>
-            Cart
+    
+    <!-- hero-section -->
+    <div class="hero-section">
+        <div class="hero-msg">
+            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local
+                delivery. <a>Click here to go to amazon.in</a></p>
         </div>
     </div>
 
-    <!-- panal nav bar -->
-    <div class="panel">
-        <div class="panel-all border">
-            <i class="fa-solid fa-bars"></i>
-            All
+    <!-- shop-section -->
+    <div class="shop-section">
+        <div class="box">
+            <div class="box-content">
+                <h2>Cloaths</h2>
+                <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>
         </div>
-        <div class="panel-ops">
-            <p class="border">Today's Deals</p>
-            <p class="border">Registry</p>
-            <p class="border">Customer Service</p>
-            <p class="border">Gift Cards</p>
-            <p class="border">Sell</p>
+        <div class="box">
+            <div class="box-content">
+                <h2>Grosary</h2>
+                <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
+                <p>See more</p>
+            </div>
         </div>
-        <div class="panel-deals border">
-            Shop deals in Electronics
-
+        <div class="box">
+            <div class="box-content">
+                <h2>Furniture</h2>
+                <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Mobiles</h2>
+                <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Mackups</h2>
+                <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Animals</h2>
+                <div class="box-img" style="background-image: url('box6_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Kids games</h2>
+                <div class="box-img" style="background-image: url('box7_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="box-content">
+                <h2>Fassions</h2>
+                <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
+                <p>See more</p>
+            </div>
         </div>
     </div>
-
-   
-</header>
 </body>
+
 </html>
