--- a/Projects/amazon clone/index.html
+++ b/Projects/amazon clone/index.html
@@ -76,7 +76,7 @@
         </div>
     </header>
 
-    
+
     <!-- hero-section -->
     <div class="hero-section">
         <div class="hero-msg">
@@ -144,6 +144,73 @@
             </div>
         </div>
     </div>
+    <div>
+        <footer class="foot-pannal">
+            Back to top
+        </footer>
+    </div>
+    <div class="foot-pannal2">
+        <ul>
+            <p>Get to Know Us</p>
+            <a>Careers</a>
+            <a>Blog</a>
+            <a>About Amazon</a>
+            <a>Investor Relations</a>
+            <a>Amazon Devices</a>
+            <a>Amazon Science</a>
+        </ul>
+        <ul>
+            <p>Make Money with Us</p>
+            <a>Sell products on Amazon</a>
+            <a>Sell on Amazon Business</a>
+            <a>Sell apps on Amazon</a>
+            <a>Become an Affiliate</a>
+            <a>Advertise Your Products</a>
+            <a>Host an Amazon Hub</a>
+            <a>›See More Make Money with Us</a>
+        </ul>
+        <ul>
+            <p>Amazon Payment Products</p>
+            <a>Amazon Business Card</a>
+            <a>Shop with Points</a>
+            <a>Reload Your Balance</a>
+            <a>Amazon Currency Converter</a>
+        </ul>
+        <ul>
+            <p>Let Us Help You</p>
+            <a>Amazon and COVID-19</a>
+            <a>Your Account</a>
+            <a>Your Orders</a>
+            <a>Shipping Rates & Policies</a>
+            <a>Returns & Replacements</a>
+            <a>Manage Your Content and Devices</a>
+            <a>Amazon Assistant</a>
+            <a>Help</a>
+        </ul>
+    </div>
+    <div class="foot-panall3">
+        <div class="logo1">
+            <img src="amazon_logo.png" alt="amazon_logo">
+        </div>
+        <div class="pannal3">
+            <i class="fa-solid fa-globe"></i>
+            <span>English</span>
+            <i class="fa-solid fa-arrows-up-down" id="arrow"></i>
+        </div>
+        <div class="pannal3">
+            <i class="fa-solid fa-dollar-sign"></i>
+            <span>USA-U.S.Dollar</span>
+        </div>
+        <div class="pannal3 paddings"><img src="usa.png" alt="USA" height="12px"><span>United States</span></div>
+    </div>
+    <div class="pannal4">
+        <a class="pa4">Conditions of Use</a>
+        <a class="pa4">Privacy Notice</a>
+        <a class="pa4">Your Ads Privacy Choices</a>
+        <span>© 1996-2023, Amazon.com, Inc. or its affiliates</span>
+    </div>
+    
+
 </body>
 
 </html>
