revision practice html

--- a/HTML/project practice.html
+++ b/HTML/project practice.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
-    <link rel="stylesheet" href="codecss/style.css">
+    <!-- <link rel="stylesheet" href="codecss/style.css"> -->
+    <link rel="stylesheet" href="codecss/newstyly.css">
 </head>
 
 <body>
 
     <header>
-        <h1>Website</h1>
+        <h1 class="mainheading">Website</h1>
     </header>
     <nav>
         <a href="#">Home</a>
@@ -101,12 +102,12 @@
                 <h2>Co-Founder</h2>
                 <img height="150" src="notes/2.jpg" alt="this my image">
                 <h3>Shubham Meshram</h3>
-                <a href="wwww.gmail.com">Gmail</a>
-                <a href="wwww.gmail.com">github</a>
-                <a href="wwww.gmail.com">linkedin</a>
-                <p>Aspiring Data scientist | Advance Excel | MySQL| Tableau |Power bi |Machine Learning| Deep Learning |
+                <a class="sm" href="wwww.gmail.com">Gmail</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a class="sm" href="wwww.gmail.com">github</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a class="sm" href="wwww.gmail.com">linkedin</a>
+                <p id="profile">Aspiring Data scientist | Advance Excel | MySQL| Tableau |Power bi |Machine Learning| Deep Learning |
                     Statistics</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nostrum dolorem distinctio voluptate
+                <p class="above">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nostrum dolorem distinctio voluptate
                     tempore, voluptatem excepturi laborum minima eum inventore odio non quos ducimus consequuntur quod
                     unde placeat iure at voluptas laudantium mollitia, dicta autem expedita perferendis. Quaerat dolores
                     repudiandae itaque nobis ducimus laborum eveniet accusantium enim? Harum praesentium mollitia ipsa
